Make the header fixed so it does not jump around when fonts are being downloaded

--- a/app/stylesheets/partials/_layout.sass
+++ b/app/stylesheets/partials/_layout.sass
@@ -21,6 +21,7 @@ body
     letter-spacing: 4px
     margin-left: 20px
     margin-top: -10px
+    height: 46px
   #subtitle
     font-size: 120%
     letter-spacing: 2px
